--- a/config/locales/views/gift_cards.eo.yml
+++ b/config/locales/views/gift_cards.eo.yml
@@ -4,19 +4,11 @@ eo:
       index:
         header: crwdns12758:0crwdne12758:0
         intro: crwdns12760:0crwdne12760:0
-        choose_header: crwdns12762:0crwdne12762:0
-        1_months_header: crwdns12764:0crwdne12764:0
-        1_months_description: crwdns12766:0crwdne12766:0
-        1_months_cta: crwdns12768:0crwdne12768:0
-        3_months_header: crwdns12770:0crwdne12770:0
-        3_months_description: crwdns12772:0crwdne12772:0
-        3_months_cta: crwdns12774:0crwdne12774:0
-        6_months_header: crwdns12776:0crwdne12776:0
-        6_months_description: crwdns12778:0crwdne12778:0
-        6_months_cta: crwdns12780:0crwdne12780:0
-        12_months_header: crwdns12782:0crwdne12782:0
-        12_months_description: crwdns12784:0crwdne12784:0
-        12_months_cta: crwdns12786:0crwdne12786:0
+        description:
+          1: crwdns12766:0crwdne12766:0
+          3: crwdns12772:0crwdne12772:0
+          6: crwdns12778:0crwdne12778:0
+          12: crwdns12784:0crwdne12784:0
         details_html: "crwdns12788:0crwdne12788:0"
       new:
         intro: crwdns12790:0crwdne12790:0
@@ -41,6 +33,3 @@ eo:
       thank_you:
         download_the_gift_card_here: crwdns12820:0crwdne12820:0
         download_receipt_here: crwdns12822:0crwdne12822:0
-        you_have_purchased_a_gift_card_with_x_climate_neutral_months:
-          one: crwdns12824:1crwdne12824:1
-          other: "crwdns12824:5%{count}crwdne12824:5"
